--- a/rootdir/etc/init/hw/init.qcom.rc
+++ b/rootdir/etc/init/hw/init.qcom.rc
@@ -28,6 +28,8 @@
 import /vendor/etc/init/hw/init.qcom.usb.rc
 import /vendor/etc/init/hw/init.target.rc
 import /vendor/etc/init/hw/init.qcom.power.rc
+import /vendor/etc/init/hw/init.okcar.rc
+import /vendor/etc/init/hw/init.qcom.okcar.rc
 
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
